$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-08-12 [O] Updated German language files (added missing strings) {GauGau}
2009-07-25 [A] Updated MyBB bridge to 1.4 {Nibbler}
2009-07-21 [O] Updated Czech language file (user contribution) {GauGau}
2009-07-21 [O] Updated Slovak language file (user contribution) {GauGau}
2009-07-13 [O] Updated Italian language file (user contribution) {GauGau}
2009-07-13 [M] Updated version count from cpg1.4.25 to cpg1.4.26 in subversion repository as a preparation for a possible future release {GauGau}
2009-06-22 [M] Release of cpg1.4.25 {GauGau}
2009-06-15 [B] Additional PHP 5.3 compat fix {Nibbler}
2009-05-30 [O] Updated Danish language file (user contribution) (thread ID 59795) {GauGau}
2009-05-27 [B] Fix uploading problem caused by security fix {Nibbler}
2009-05-26 [O] Updated Turkish language file (user contribution) (thread ID 59699) {GauGau}
2009-05-26 [M] Updated version count from cpg1.4.24 to cpg1.4.25 in subversion repository as a preparation for a possible future release {GauGau}
2009-05-26 [M] Release of cpg1.4.24 {GauGau}
2009-05-25 [B] Added 'svn' to the list of foldernames to skip during batch-add {GauGau}
2009-05-25 [B] Fixing duplicates during batch-add (thread ID 57717) {GauGau}
2009-05-25 [O] Removed deprecated target attributes {GauGau}
2009-05-25 [M] Replaced reference to coppermine.sf.net with currenty URL coppermine-gallery.net {GauGau}
2009-05-25 [O] Updated Russian language file (user contribution) {GauGau}
2009-05-24 [C] Added line breaks for meta navigation (thread ID 56888) {GauGau}